Gridbox white hover color tweak

--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -403,7 +403,7 @@
   }
   // Whites and yellows family
   &-light1 {
-    .gridbox-color(@gridbox-text-dark; @white1; darken(@grey3, 5%); @grey2; @gridbox-text-dark; 90%);
+    .gridbox-color(@gridbox-text-dark; @white1; darken(@white1, 5%); @grey2; @gridbox-text-dark; 90%);
     // Exception - white full needs border.
     &.full {
       border: 1px solid @grey2;
