--- a/docs/assets/css/doctypes/brednyhed.css
+++ b/docs/assets/css/doctypes/brednyhed.css
@@ -1,14 +1,34 @@
 @media (min-width: 992px) {
+  .title {
+    font-weight: 40px;
+  }
+
+  h2 {
+    font-size: 24px;
+  }
+
   .manchet {
     font-size: 16px;
   }
 
   .nyhedsdato {
+    font-weight: 400;
+    font-weight: 17px;
+  }
+
+  blockquote {
+    font-size: 22px;
     font-weight: 600;
   }
 
+  blockquote::before {
+    top: auto;
+    bottom: -27px;
+    font-size: 85px;
+  }
+
   .widenews-content {
-    font-size: 14px;
+    font-size: 15px;
   }
 
   .img-default {
