--- a/docs/assets/css/doctypes/brednyhed.css
+++ b/docs/assets/css/doctypes/brednyhed.css
@@ -60,7 +60,7 @@
     margin-right: 23px;
   }
 
-  .img-default {
+  .widenews-content .img-default {
     margin: 0 calc(-25% + -7px) 0 calc(-25% + -7px) !important;
     max-width: 757px;
     float: none !important;
@@ -100,5 +100,13 @@
     margin-left: calc(-25% + -6px);
     max-width: 60%;
     margin-right: 23px;
+  }
+
+  .widenews-contactbox {
+    min-height: 20px;
+    padding: 15px;
+    background-color: #f5f5f5;
+    border: 1px solid #e3e3e3;
+    border-radius: 2px
   }
 }
