--- a/docs/assets/css/doctypes/brednyhed.css
+++ b/docs/assets/css/doctypes/brednyhed.css
@@ -1,3 +1,11 @@
+.widenews-contactbox {
+  min-height: 20px;
+  padding: 15px;
+  background-color: #f5f5f5;
+  border: 1px solid #e3e3e3;
+  border-radius: 2px
+}
+
 @media (min-width: 992px) {
   .title {
     font-size: 40px;
@@ -101,12 +109,8 @@
     max-width: 60%;
     margin-right: 23px;
   }
-}
 
-.widenews-contactbox {
-  min-height: 20px;
-  padding: 15px;
-  background-color: #f5f5f5;
-  border: 1px solid #e3e3e3;
-  border-radius: 2px
+  .widenews-contactbox {
+    padding: 15px 15px 0 16.66666667%;
+  }
 }
