--- a/docs/assets/css/doctypes/brednyhed.css
+++ b/docs/assets/css/doctypes/brednyhed.css
@@ -11,7 +11,6 @@
 }
 
 blockquote.full-width {
-  margin: 10px calc(-25% + -7px) 23px calc(-25% + -7px);
   max-width: 757px;
   width: auto;
   padding: 15px;
@@ -19,6 +18,7 @@ blockquote.full-width {
 
 blockquote.full-width::before {
   color: inherit;
+  font-size: 60px;
 }
 
 @media (min-width: 992px) {
@@ -58,7 +58,8 @@ blockquote.full-width::before {
   }
 
   blockquote.full-width {
-    padding: 23px 30px;
+    margin: 10px calc(-25% + -7px) 23px calc(-25% + -7px);
+    padding: 18px 36px 23px 30px;
   }
 
   blockquote footer {
