--- a/docs/assets/css/doctypes/brednyhed.css
+++ b/docs/assets/css/doctypes/brednyhed.css
@@ -63,8 +63,12 @@ blockquote.full-width::before {
   }
 
   blockquote.full-width {
-    margin: 10px calc(-25% + -7px) 23px calc(-25% + -7px);
-    padding: 20px 25% 30px 25%;
+    margin: 15px calc(-25% + -7px) 23px calc(-25% + -7px);
+    padding: 36px 25% 36px 25%;
+  }
+
+  blockquote.full-width {
+    top: 10px;
   }
 
   blockquote footer {
@@ -130,6 +134,6 @@ blockquote.full-width::before {
   }
 
   .widenews-contactbox {
-    padding: 15px 15px 0 16.66666667%;
+    padding: 20px 20px 20px 16.66666667%;
   }
 }
