--- a/docs/assets/css/doctypes/brednyhed.css
+++ b/docs/assets/css/doctypes/brednyhed.css
@@ -69,6 +69,7 @@ blockquote.full-width::before {
 
   blockquote.full-width::before {
     top: 10px;
+    font-size: 80px;
   }
 
   blockquote footer {
