--- a/less/scaffolding.less
+++ b/less/scaffolding.less
@@ -17,6 +17,13 @@
 }
 // Body reset
 
+// Note: Fonts are stored in the cms.
+// .font-face('Name', 'url + filename', weight in numbers, font style, svg id)
+.font-face( @web-font-family-name, @web-font-path, 300, normal, @web-font-svg-id);
+.font-face( @web-font-family-name, @web-font-path, 400, normal, @web-font-svg-id);
+.font-face( @web-font-family-name, @web-font-path, 600, normal, @web-font-svg-id);
+.font-face( @web-font-family-name, @web-font-path, 700, normal, @web-font-svg-id);
+
 html {
   font-size: 10px;
   -webkit-tap-highlight-color: rgba(0,0,0,0);
