--- a/docs/assets/css/ku-dk-frontpage/ku-dk-frontpage.css
+++ b/docs/assets/css/ku-dk-frontpage/ku-dk-frontpage.css
@@ -376,7 +376,7 @@ video {
   content: "";
   background-repeat: no-repeat;
   background-size: contain;
-  height: 20px;
+  height: 100%;
   width: 100%;
 }
 
