--- a/docs/assets/css/ku-dk-frontpage/ku-dk-frontpage.css
+++ b/docs/assets/css/ku-dk-frontpage/ku-dk-frontpage.css
@@ -937,7 +937,7 @@ video {
     width: 150px;
     margin-right: 20px;
     content: "";
-    background-image: url("data:image/svg+xml,%3Csvg id='mag' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 191.74 191.42'%3E%3Cdefs%3E%3Cstyle%3E .magnifier %7B fill: %23666; %7D %3C/style%3E%3C/defs%3E%3Cpath class='magnifier' d='M78 3.68A74.27 74.27 0 113.68 77.56 74.24 74.24 0 0178 3.68zm-.21 129.21A54.94 54.94 0 1023 77.5a54.84 54.84 0 0054.79 55.39zM140.7 155.38l15.22-15.1c.92 1 1.88 2.07 2.89 3.09q17.16 17.19 34.34 34.36c3 3 3 6.1 0 9.11-2.11 2.11-4.21 4.22-6.34 6.3-2.67 2.61-5.78 2.62-8.4 0q-18.66-18.62-37.28-37.25c-.13-.16-.29-.34-.43-.51zM134.07 149c-.82-.86-1.61-1.73-2.43-2.57-2-2-2.25-4.74-.33-6.84 2.68-3 5.49-5.81 8.42-8.52 2.31-2.13 4.93-1.84 7.17.42.8.8 1.62 1.58 2.4 2.34z' transform='translate(-3.68 -3.68)'/%3E%3C/svg%3E%0A");
+    background-image: url('data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 191.74 191.42"%3E%3Cpath fill="%23666" d="M78 3.68A74.27 74.27 0 113.68 77.56 74.24 74.24 0 0178 3.68zm-.21 129.21A54.94 54.94 0 1023 77.5a54.84 54.84 0 0054.79 55.39zM140.7 155.38l15.22-15.1c.92 1 1.88 2.07 2.89 3.09q17.16 17.19 34.34 34.36c3 3 3 6.1 0 9.11-2.11 2.11-4.21 4.22-6.34 6.3-2.67 2.61-5.78 2.62-8.4 0q-18.66-18.62-37.28-37.25c-.13-.16-.29-.34-.43-.51zM134.07 149c-.82-.86-1.61-1.73-2.43-2.57-2-2-2.25-4.74-.33-6.84 2.68-3 5.49-5.81 8.42-8.52 2.31-2.13 4.93-1.84 7.17.42.8.8 1.62 1.58 2.4 2.34z" transform="translate(-3.68 -3.68)"/%3E%3C/svg%3E');
     background-repeat: no-repeat;
     background-size: contain;
   }
