--- a/less/ku-slickslider.less
+++ b/less/ku-slickslider.less
@@ -171,8 +171,8 @@
 .slick-active {
   .slide-link {
     &:focus {
-      .tab-focus-v2();
-      outline-offset: -1px;
+      outline: 2px solid @outline-color2;
+      outline-offset: -2px;
     }
   }
 }
