Added class to frontpage

--- a/docs/assets/css/ku-dk-frontpage/ku-dk-frontpage.css
+++ b/docs/assets/css/ku-dk-frontpage/ku-dk-frontpage.css
@@ -735,6 +735,10 @@ video {
     opacity: .4;
   }
 
+  .til-gavn.caption-top .visual-caption {
+    top: 112px;
+  }
+
   .divider-bottom>.container::after, .divider-top>.container::before {
     max-width: 914px
   }
