--- a/less/ku-privacypolicy.less
+++ b/less/ku-privacypolicy.less
@@ -41,7 +41,7 @@
 }
 
 #ccc-title {
-  font-size: 21px;
+  font-size: 24px;
   @media all and (min-width: @screen-sm-max) {
     font-size: 26px;
   }
@@ -69,8 +69,8 @@
   border: 1px solid @gray-888;
   padding: 0 @grid-gutter-by-half 5px;
   @media all and (min-width: @screen-sm-max) {
-    //padding: 0 @grid-gutter-by-half @grid-gutter-by-half;
-    padding: 0 @grid-gutter-by-half 0;
+    padding: 0 @grid-gutter-by-half @grid-gutter-by-half;
+    // padding: 0 @grid-gutter-by-half 0;
   }
   border-radius: @border-radius-base;
 
@@ -82,8 +82,8 @@
 .ccc-select-title {
   font-size: 17px;
   margin-top: 0;
-  //display: block;
-  display: inline-block;
+  display: block;
+  // display: inline-block;
   @media all and (min-width: @screen-sm-max) {
     font-size: 20px;
   }
@@ -97,8 +97,8 @@
   letter-spacing: 0.7px;
   position: relative;
   width: 100%;
-  //padding: 0 @grid-gutter-width 0 0;
-  padding: 0;
+  padding: 0 @grid-gutter-width 0 0;
+  // padding: 0;
   color: @white-color;
   background: transparent;
   border: 0;
@@ -110,18 +110,18 @@
     .glyphicon;
     font-size: 26px;
     // Todo: delete
-    // position: absolute;
-    // top: auto;
-    // right: 0;
-    // bottom: 0;
+    position: absolute;
+    top: auto;
+    right: 0;
+    bottom: 0;
     // Todo: delete
 
-    float: right;
-    vertical-align: middle;
-    font-size: 20px;
-    @media all and (min-width: @screen-sm-max) {
-      font-size: 26px;
-    }
+    // float: right;
+    // vertical-align: middle;
+    // font-size: 20px;
+    // @media all and (min-width: @screen-sm-max) {
+    //   font-size: 26px;
+    // }
     color: @semi-white;
   }
 
@@ -137,13 +137,13 @@
 }
 
 .ccc-select-description {
-  //display: block;
-  float: right;
-  margin-right: 15px;
+  display: block;
+  // float: right;
+  // margin-right: 15px;
   @media all and (max-width: @screen-xs-max) {
     margin-bottom: @grid-gutter-by-half;
-    font-size: 12px;
-    margin: 4px 10px 2px auto;
+    // font-sise: 12px;
+    // margin: 4px 10px 2px auto;
   }
 }
 
