--- a/less/ku-privacypolicy.less
+++ b/less/ku-privacypolicy.less
@@ -60,7 +60,7 @@
 @media (max-width: @screen-xs) {
   #ccc-desc {
     position: relative;
-    margin-bottom: 10px;
+    margin-bottom: 15px;
   }
 
   #ccc-desc::after {
@@ -76,6 +76,7 @@
   .ccc-intro-inner {
     overflow-y: scroll;
     max-height: 250px;
+    padding-right: 5px;
   }
 }
 
