--- a/less/ku-privacypolicy.less
+++ b/less/ku-privacypolicy.less
@@ -75,8 +75,9 @@
 
   .ccc-intro-inner {
     overflow-y: scroll;
-    max-height: 260px;
-    padding-right: 5px;
+    -webkit-overflow-scrolling: touch;
+    max-height: 265px;
+    padding: 0 5px 5px 0;
   }
 }
 
