--- a/less/ku-privacypolicy.less
+++ b/less/ku-privacypolicy.less
@@ -161,7 +161,7 @@
 .ccc-select-description {
   //display: block;
   float: right;
-  margin-right: 15px;
+  margin: 2px 15px 0 0;
   @media all and (max-width: @screen-xs-max) {
     margin-bottom: @grid-gutter-by-half;
     font-size: 12px;
