--- a/less/ku-privacypolicy.less
+++ b/less/ku-privacypolicy.less
@@ -35,14 +35,14 @@
 .ccc-popup {
   height: 100%;
   padding-bottom: @grid-gutter-height;
-  @media all and (min-width: @screen-sm-max) {
+  @media (min-width: @screen-sm-max) {
     padding: @grid-gutter-height 130px floor((@grid-gutter-width * 2)) 130px;
   }
 }
 
 #ccc-title {
   font-size: 21px;
-  @media all and (min-width: @screen-sm-max) {
+  @media (min-width: @screen-sm-max) {
     font-size: 24px;
   }
   line-height: @line-height-small;
@@ -51,7 +51,7 @@
 
 #ccc-desc {
   font-size: 14px;
-  @media all and (min-width: @screen-sm-max) {
+  @media (min-width: @screen-sm-max) {
     font-size: 16px;
     letter-spacing: 0.7px;
     margin-bottom: 30px;
@@ -91,7 +91,7 @@
 .ccc-list > li {
   border: 1px solid @gray-888;
   padding: 0 @grid-gutter-by-half 5px;
-  @media all and (min-width: @screen-sm-max) {
+  @media (min-width: @screen-sm-max) {
     //padding: 0 @grid-gutter-by-half @grid-gutter-by-half;
     padding: 0 @grid-gutter-by-half;
   }
@@ -107,14 +107,14 @@
   margin-top: 0;
   //display: block;
   display: inline-block;
-  @media all and (min-width: @screen-sm-max) {
+  @media (min-width: @screen-sm-max) {
     font-size: 20px;
   }
 }
 
 .ccc-select {
   font-size: 15px;
-  @media all and (min-width: @screen-sm-max) {
+  @media (min-width: @screen-sm-max) {
     font-size: 16px;
   }
   letter-spacing: 0.7px;
@@ -141,7 +141,7 @@
     float: right;
     vertical-align: middle;
     font-size: 20px;
-    @media all and (min-width: @screen-sm-max) {
+    @media (min-width: @screen-sm-max) {
       font-size: 26px;
     }
     color: @semi-white;
