Cookie popup tweaks

--- a/less/ku-privacypolicy.less
+++ b/less/ku-privacypolicy.less
@@ -35,15 +35,15 @@
 .ccc-popup {
   height: 100%;
   padding-bottom: @grid-gutter-height;
-  @media all and (min-width: @screen-sm-max) {
-    padding: @grid-gutter-height 100px floor((@grid-gutter-width * 2)) 100px;
+  @media (min-width: @screen-sm-max) {
+    padding: @grid-gutter-height 130px floor((@grid-gutter-width * 2)) 130px;
   }
 }
 
 #ccc-title {
-  font-size: 24px;
-  @media all and (min-width: @screen-sm-max) {
-    font-size: 26px;
+  font-size: 21px;
+  @media (min-width: @screen-sm-max) {
+    font-size: 24px;
   }
   line-height: @line-height-small;
   margin-top: @grid-gutter-by-half;
@@ -51,10 +51,33 @@
 
 #ccc-desc {
   font-size: 14px;
-  @media all and (min-width: @screen-sm-max) {
+  @media (min-width: @screen-sm-max) {
     font-size: 16px;
     letter-spacing: 0.7px;
     margin-bottom: 30px;
+  }
+}
+@media (max-width: @screen-xs) {
+  #ccc-desc {
+    position: relative;
+    margin-bottom: 15px;
+  }
+
+  #ccc-desc::after {
+    content: '';
+    background: linear-gradient(to top, @ku-cookiebox-bg, fade(@ku-cookiebox-bg, 0));
+    height: 35px;
+    position: absolute;
+    width: calc(100% - var(--scroll-bar));
+    bottom: 0;
+    pointer-events: none;
+  }
+
+  .ccc-intro-inner {
+    overflow-y: scroll;
+    -webkit-overflow-scrolling: touch;
+    max-height: 265px;
+    padding: 0 5px 20px 0;
   }
 }
 
@@ -68,9 +91,8 @@
 .ccc-list > li {
   border: 1px solid @gray-888;
   padding: 0 @grid-gutter-by-half 5px;
-  @media all and (min-width: @screen-sm-max) {
-    padding: 0 @grid-gutter-by-half @grid-gutter-by-half;
-    // padding: 0 @grid-gutter-by-half 0;
+  @media (min-width: @screen-sm-max) {
+    padding: 0 @grid-gutter-by-half;
   }
   border-radius: @border-radius-base;
 
@@ -82,23 +104,22 @@
 .ccc-select-title {
   font-size: 17px;
   margin-top: 0;
-  display: block;
-  // display: inline-block;
-  @media all and (min-width: @screen-sm-max) {
+  //display: block;
+  display: inline-block;
+  @media (min-width: @screen-sm-max) {
     font-size: 20px;
   }
 }
 
 .ccc-select {
   font-size: 15px;
-  @media all and (min-width: @screen-sm-max) {
+  @media (min-width: @screen-sm-max) {
     font-size: 16px;
   }
   letter-spacing: 0.7px;
   position: relative;
   width: 100%;
-  padding: 0 @grid-gutter-width 0 0;
-  // padding: 0;
+  padding: 0;
   color: @white-color;
   background: transparent;
   border: 0;
@@ -109,19 +130,12 @@
   &:before {
     .glyphicon;
     font-size: 26px;
-    // Todo: delete
-    position: absolute;
-    top: auto;
-    right: 0;
-    bottom: 0;
-    // Todo: delete
-
-    // float: right;
-    // vertical-align: middle;
-    // font-size: 20px;
-    // @media all and (min-width: @screen-sm-max) {
-    //   font-size: 26px;
-    // }
+    float: right;
+    vertical-align: middle;
+    font-size: 20px;
+    @media (min-width: @screen-sm-max) {
+      font-size: 26px;
+    }
     color: @semi-white;
   }
 
@@ -137,13 +151,13 @@
 }
 
 .ccc-select-description {
-  display: block;
-  // float: right;
-  // margin-right: 15px;
+  //display: block;
+  float: right;
+  margin: 2px 15px 0 0;
   @media all and (max-width: @screen-xs-max) {
     margin-bottom: @grid-gutter-by-half;
-    // font-sise: 12px;
-    // margin: 4px 10px 2px auto;
+    font-size: 12px;
+    margin: 4px 10px 2px auto;
   }
 }
 
@@ -218,8 +232,6 @@
   height: 218px;
   position: relative;
   overflow-y: scroll;
-  // overflow-x: auto;
-  //background-color: @white-color;
   transition: height 0.4s ease;
   -webkit-overflow-scrolling: touch;
 }
@@ -318,10 +330,6 @@
 
 .right-side {
   .cookiefilter {
-    // position: absolute;
-    // top: 0;
-    // left: 0;
-    // bottom: 0;
     height: 100%;
     width: 100%;
     padding: 10px;
@@ -347,58 +355,3 @@
     }
   }
 }
-// KU privacy policy box
-// @media (min-width: @screen-xs-max) {
-//   .privacy-policy {
-//     position: fixed;
-//     bottom: 0;
-//     right: 0;
-//     left: 0;
-//     z-index: 1020!important;
-//     height: auto;
-//     padding: 40px;
-//     color: @white-color;
-//     font-weight: 600;
-//     background: @ku-cookiebox-bg;
-//
-//     .h2 {
-//       font-weight: 700;
-//       margin-top: 0;
-//     }
-//
-//     p {
-//       margin: 0 0 2px;
-//     }
-//
-//     .btn {
-//       #gradient.vertical(@gray-lighter; darken(@gray-lighter, 12%); 0%; 100%);
-//       color: @ku-red;
-//       padding: 6px 23px;
-//       font-size: 1.3em;
-//       font-weight: bold;
-//       text-transform: uppercase;
-//     }
-//
-//     .laes_mere_cookies {
-//       color: @white-color;
-//       text-decoration: underline;
-//       display: inline-block;
-//       margin-top: 16px;
-//
-//       &:before {
-//         content: "\00bb";
-//         color: inherit;
-//         display: inline-block;
-//         font-size: 1.4em;
-//         margin-right: 5px;
-//         top: 1px;
-//         position: relative;
-//       }
-//     }
-//   }
-// }
-// @media (max-width: @screen-xs-max) {
-//   .privacy-policy {
-//     display: none;
-//   }
-// }
