Cookie popup tweaks

--- a/less/ku-privacypolicy.less
+++ b/less/ku-privacypolicy.less
@@ -65,7 +65,7 @@
 
   #ccc-desc::after {
     content: '';
-    background: linear-gradient(to top, @ku-cookiebox-bg, fade(@ku-cookiebox-bg, 0));
+    background: linear-gradient(to top, fade(@ku-cookiebox-bg, .96), fade(@ku-cookiebox-bg, 0));
     height: 35px;
     position: absolute;
     width: calc(100% - var(--scroll-bar));
