--- a/less/ku-privacypolicy.less
+++ b/less/ku-privacypolicy.less
@@ -77,7 +77,7 @@
     overflow-y: scroll;
     -webkit-overflow-scrolling: touch;
     max-height: 265px;
-    padding: 0 5px 25px 0;
+    margin-bottom: 35px;
   }
 }
 
