Cookie popup tweak

--- a/less/ku-privacypolicy.less
+++ b/less/ku-privacypolicy.less
@@ -77,7 +77,7 @@
     overflow-y: scroll;
     -webkit-overflow-scrolling: touch;
     max-height: 265px;
-    padding-right: 10px;
+    padding: 0 10px 10px 0;
     margin-bottom: 40px;
   }
 }
