Cookie popup tweak

--- a/less/ku-privacypolicy.less
+++ b/less/ku-privacypolicy.less
@@ -42,11 +42,13 @@
 
 #ccc-title {
   font-size: 21px;
-  @media (min-width: @screen-sm-max) {
-    font-size: 24px;
-  }
   line-height: @line-height-small;
   margin-top: @grid-gutter-by-half;
+  margin-bottom: 15px;
+  @media (min-width: @screen-sm-max) {
+    font-size: 24px;
+    margin-bottom: 10px;
+  }
 }
 
 #ccc-desc {
