--- a/less/buttons.less
+++ b/less/buttons.less
@@ -158,6 +158,17 @@
       margin-left: 5px;
     }
   }
+
+  &.instagram {
+    .button-variant(@white-color; #c13584; darken(#c13584, 3%));
+
+    &::after {
+      content: @icon-instagram;
+      font-size: 24px;
+      top: 4px;
+      margin-left: 5px;
+    }
+  }
 }
 // Link buttons
 // -------------------------
