--- a/less/ku-privacypolicy.less
+++ b/less/ku-privacypolicy.less
@@ -65,7 +65,7 @@
 
   #ccc-desc::after {
     content: '';
-    background: linear-gradient(to top, fade(@ku-cookiebox-bg, 96), fade(@ku-cookiebox-bg, 0));
+    background: linear-gradient(to top, fade(@ku-cookiebox-bg, 98), fade(@ku-cookiebox-bg, 0));
     height: 35px;
     position: absolute;
     width: calc(100% - var(--scroll-bar, 10px));
@@ -145,6 +145,7 @@
     line-height: 1;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    content: "\e259";
     font-size: 26px;
     float: right;
     vertical-align: middle;
@@ -288,7 +289,7 @@
       flex: 1;
     }
     text-transform: none;
-    font-size: 14px;
+    font-size: 16px;
     padding: 10px;
 
     &:focus {
