--- a/docs/_includes/css/buttons.html
+++ b/docs/_includes/css/buttons.html
@@ -79,6 +79,9 @@
 
 <!-- Share url on Twitter -->
 <button type="button" class="btn btn-social twitter" onclick="shareURL('twitter')">Share on</button>
+
+<!-- Instagram -->
+<button type="button" class="btn btn-social instagram" onclick="location.href='https://www.instagram.com/university_of_copenhagen';">Follow us on Instagram</button>
 {% endhighlight %}
   <div class="bs-callout bs-callout-warning" id="callout-buttons-color-accessibility">
     <h4>Conveying meaning to assistive technologies</h4>
