--- a/docs/_includes/css/buttons.html
+++ b/docs/_includes/css/buttons.html
@@ -48,6 +48,7 @@
     <button type="button" class="btn btn-social facebook" onclick="shareURL('facebook')">Share on</button>
     <button type="button" class="btn btn-social linkedin" onclick="shareURL('linkedin')">Share on</button>
     <button type="button" class="btn btn-social twitter" onclick="shareURL('twitter')">Share on</button>
+    <button type="button" class="btn btn-social instagram" onclick="location.href='https://www.instagram.com/university_of_copenhagen';">Follow us on Instagram</button>
   </div>
 {% highlight html %}
 <!-- Standard button -->
