Updated Instagram button

--- a/less/buttons.less
+++ b/less/buttons.less
@@ -143,7 +143,7 @@
     &::after {
       content: @icon-linkedin;
       font-size: 24px;
-      top: 1px;
+      top: 2px;
       margin-left: 7px;
     }
   }
@@ -161,6 +161,7 @@
 
   &.instagram {
     .button-variant(@white-color; #c13584; darken(#c13584, 3%));
+    background: linear-gradient(45deg , #c13584, #e1306c, #fd1d1d);
 
     &::after {
       content: @icon-instagram;
