Cookie popup teaks

--- a/less/ku-privacypolicy.less
+++ b/less/ku-privacypolicy.less
@@ -65,7 +65,7 @@
 
   #ccc-desc::after {
     content: '';
-    background: linear-gradient(to top, fade(@ku-cookiebox-bg, 98), fade(@ku-cookiebox-bg, 0));
+    background: linear-gradient(to top, rgb(87, 87, 87), fade(@ku-cookiebox-bg, 0));
     height: 35px;
     position: absolute;
     width: calc(100% - var(--scroll-bar, 10px));
@@ -148,8 +148,6 @@
     line-height: 1;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    font-size: 26px;
-    float: right;
     font-size: 20px;
     @media (min-width: @screen-sm-max) {
       font-size: 26px;
