Cookie popup teaks

--- a/less/ku-privacypolicy.less
+++ b/less/ku-privacypolicy.less
@@ -140,12 +140,13 @@
   &::after {
     content: "\e259";
     position: relative;
-    top: 3px;
-    display: inline-block;
+    top: -1px;
+    align-self: center;
+    display: inline-flex;
     font-family: 'Glyphicons Halflings';
     font-style: normal;
     font-weight: normal;
-    line-height: 1;
+    line-height: 0;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     font-size: 20px;
